# ros1_diffbot

bot_control/: CMakeLists.txt  README.md  package.xml
bot_control/launch/: bot_control.launch
bot_control/scripts/: reading_laser.py  rviz_config.rviz
bot_description/: README.md  package.xml
bot_description/config/: joint_names_bot_description.yaml  view_bot.rviz
bot_description/launch/: control.launch  rviz.launch
bot_description/meshes/: base_link.STL  camera.STL  castor_wheel.STL  left_wheel.STL  lidar_1.STL  right_wheel.STL
bot_description/urdf/: bot_description.csv  bot_description.urdf
bot_world/: README.md  package.xml
bot_world/launch/: bot_world.launch
bot_world/worlds/: bot_world.world
bot_world/worlds/my_world.world/: model.sdf
