<?xml version="1.0"?>
<package format="2">
  <name>bot_control</name>
  <version>0.0.0</version>
  <description>The bot_control package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>

